검색기능 서버와 연결 및 프론트연결 작업

--- a/src/main/chungmu/src/css/MusicPlayer.css
+++ b/src/main/chungmu/src/css/MusicPlayer.css
@@ -64,9 +64,18 @@
 {
     width: 36vh;
     height: 40vh;
-    background-color: #444754;
+    background-color: #000000;
     border-radius: 2vh;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.ThumbNail img
+{
+    width: 100%;
+    object-fit: cover;
 }
 
 .AlbumInfoBox
