--- a/src/main/chungmu/src/css/AddPlaylist.css
+++ b/src/main/chungmu/src/css/AddPlaylist.css
@@ -62,6 +62,7 @@
 .PlaylistList li {
   padding: 10px;
   border-bottom: 1px solid #ddd;
+  color: black;
 }
 
 .AddPlaylistActions {
@@ -75,6 +76,7 @@
   cursor: pointer;
   background-color: #007bff;
   color: white;
+  margin-left: 2vh;
   border-radius: 4px;
 }
 
