--- a/src/main/chungmu/src/css/Playlist.css
+++ b/src/main/chungmu/src/css/Playlist.css
@@ -38,6 +38,14 @@
     border-radius: 1vh;
 }
 
+.ListThumbnail img
+{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    border-radius: 1vh;
+}
+
 .ListText
 {
     width: 10vh;
