--- a/src/main/chungmu/src/css/MusicPlayer.css
+++ b/src/main/chungmu/src/css/MusicPlayer.css
@@ -1,25 +1,22 @@
-.MusicPlayer
-{
+.MusicPlayer {
     width: 100%;
     height: 100%;
-    padding : 2vh;
-    box-sizing : border-box;
+    padding: 2vh;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     background-color: #2e313d;
     /* 플레이어 내부 패딩 조절 하려면 여기 */
 }
 
-.playerHeader
-{
+.playerHeader {
     height: 11.5vh;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
 }
 
-.HeaderBtn
-{
+.HeaderBtn {
     width: 40vh;
     height: 100%;
     display: flex;
@@ -28,30 +25,25 @@
     flex-direction: row;
 }
 
-.rightarrowBtn
-{
+.rightarrowBtn {
     margin-right: auto;
+    display: flex;
 }
 
-.rightarrowBtn:hover{
+.rightarrowBtn:hover {
     cursor: pointer;
 }
 
-.menuBtn
-{
-    
-}
+.menuBtn {}
 
-.MainBox
-{
-    flex-grow : 1;
+.MainBox {
+    flex-grow: 1;
     box-sizing: border-box;
     margin-top: 4vh;
 }
 
-.AlbumBox
-{
-    height : 60%;
+.AlbumBox {
+    height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,8 +51,7 @@
     box-sizing: border-box;
 }
 
-.ThumbNail
-{
+.ThumbNail {
     width: 36vh;
     height: 40vh;
     background-color: #000000;
@@ -71,28 +62,24 @@
     justify-content: center;
 }
 
-.ThumbNail img
-{
+.ThumbNail img {
     width: 100%;
     object-fit: cover;
 }
 
-.AlbumInfoBox
-{
+.AlbumInfoBox {
     text-align: center;
     margin-top: 3vh;
     box-sizing: border-box;
 }
 
-.AlbumName
-{
+.AlbumName {
     font-weight: bold;
     font-size: 2.5vh;
 }
 
-.ControlBox
-{
-    height : 40%;
+.ControlBox {
+    height: 40%;
     margin-top: 2vh;
     box-sizing: border-box;
 }
@@ -100,24 +87,21 @@
 .PlayListModal {
     background-color: red;
     animation: slide-up 0.5s ease-out forwards;
-    
+
 }
 
-.playlistHeader
-{
+.playlistHeader {
     width: 44vh;
     display: flex;
     align-items: center;
     margin-top: 5vh;
 }
 
-.playlistHeader h1
-{
+.playlistHeader h1 {
     margin-right: auto;
 }
 
-.playlistBtn:hover
-{
+.playlistBtn:hover {
     cursor: pointer;
 }
 
@@ -126,6 +110,7 @@
     0% {
         transform: translateY(600%);
     }
+
     100% {
         transform: translateY(0);
     }
@@ -133,7 +118,13 @@
 
 
 
-  
-  
-  
- 
+
+@media (min-width: 800px) {
+
+    .rightarrowBtn {
+        display: none;
+    }
+
+    
+
+}
