서버 시작 초기 playebox 못 찾는 오류 수정 , 한곡재생 기능 추가, 재생목록 가져오기 추가

--- a/src/main/chungmu/src/css/Home.css
+++ b/src/main/chungmu/src/css/Home.css
@@ -1,5 +1,13 @@
+.Home
+{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+
 .ListContainer {
-    max-height: 70vh;
+    flex-grow: 1;
     overflow-y: auto; /* 수직 스크롤 활성화 */
   } 
 
